# StyleTTS2

./: README.md  inference.py  pyproject.toml  setup.cfg  train.py
styletts2/: dataset.py  lightning.py  losses.py  models.py  text_utils.py  utils.py
styletts2/cli/: __init__.py  preprocess.py  train.py
styletts2/ev_config/: __init__.py  text.py  translation.py
styletts2/modules/: discriminators.py  hifigan.py  istftnet.py  slmadv.py
styletts2/modules/diffusion/: diffusion.py  modules.py  sampler.py  utils.py
styletts2/pretrained/asr/: models.py
styletts2/pretrained/jdc/: model.py
styletts2/pretrained/plbert/: util.py
styletts2/tests/: test_ev_config.py
