[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "styletts2"
version = "0.1.0"
description = "StyleTTS2: Human-level TTS through style diffusion and adversarial training with large speech language models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10, <3.13"
dependencies = [
    "torch>=2.0",
    "torchaudio>=2.0",
    "transformers>=4.30",
    "lightning>=2.0",
    "librosa>=0.9",
    "soundfile",
    "pydub",
    "pyyaml",
    "munch",
    "einops>=0.5",
    "einops-exts",
    "tqdm",
    "matplotlib",
    "scipy",
    "numpy",
    "pandas",
    "typer>=0.9",
    "typing-extensions",
    "monotonic-align",
    # temporary: used by scripts/train_first.py until Lightning migration
    "accelerate",
    "tensorboard>=2.20.0",
    "torchcodec>=0.9.1",
    "everyvoice>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

# ---------------------------------------------------------------------------
# uv configuration
# ---------------------------------------------------------------------------

[tool.uv.sources]
# monotonic_align has no PyPI release; install from source
monotonic-align = { git = "https://github.com/resemble-ai/monotonic_align.git" }

# PyTorch CUDA wheels — uncomment and adjust the CUDA version as needed.
# torch = { index = "pytorch-cu121" }
# torchaudio = { index = "pytorch-cu121" }

# [[tool.uv.index]]
# name = "pytorch-cu121"
# url = "https://download.pytorch.org/whl/cu121"
# explicit = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["styletts2/tests"]
